--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -120,6 +120,7 @@
           </button>
           <div class="modal__header">
             <h2 class="modal__title">
+              Новый клиент
             </h2>
             <span class="modal__id"></span>
           </div>
@@ -154,10 +155,10 @@
               </div>
               <div class="contacts modal__contacts">
                 <button class="contacts__add-button clear-button" id="add-contact" type="button">
-                  <div class="contacts__add-icon-container">
+                  <span class="contacts__add-icon-container">
                     <img class="contacts__add-icon-main contacts__add-icon" src="images/add-contact.svg" alt="">
                     <img class="contacts__add-icon-fill contacts__add-icon" src="images/add-contact-filled.svg" alt="">
-                  </div>
+                  </span>
                   Добавить контакт
                 </button>
               </div>
